# agentdance

./: .gitignore  CLAUDE.md  agentdance-prd.md  implementation-progress.md  index.html  mcp-bridge.mjs  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wdio.conf.ts
.github/workflows/: ci.yml  landing.yml  release.yml
charts/agentdance-landing/: Chart.yaml  values.yaml
charts/agentdance-landing/templates/: deployment.yaml  healthcheckpolicy.yaml  httproute.yaml  service.yaml
landing/: Dockerfile  index.html  nginx.conf
landing/k8s/: deployment.yaml  httproute.yaml  service.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bridge_api.rs  lib.rs  mcp_host.rs  memory.rs  pending_queries.rs  process_manager.rs  registry.rs
src/components/: AgentInspector.tsx  Background.tsx  Logo.tsx  Sidebar.tsx  SpawnModal.tsx  Stage.tsx  WelcomeScreen.tsx
src/lib/: planUtils.ts  types.ts
tests/e2e/: smoke.spec.ts
