[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.49.0", features = ["full", "io-util", "process"] }
uuid = { version = "1.20.0", features = ["v4"] }
rusqlite = "0.38.0"
jsonrpsee = { version = "0.24.10", features = ["full"] }
tauri-plugin-webdriver = "0.2"
axum = "0.8"
tower = "0.5"
